--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,18 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "name": "Synonym Finder",
+  "author": "Arvin Ezzati",
+  "version": "1.0.0",
+  "manifest_version": 2,
+  "description": "Search a word for its synonyms as well as its definitions and parts of speech!",
+  "icons": {
+    "128": "/s512.png",
+    "48": "/s128.png"
+  },
+  "browser_action": {
+    "default_popup": "index.html",
+    "default_title": "Find Synonym"
+  },
+
+  "permissions": ["activeTab"],
+  "content_security_policy": "script-src 'self' 'sha256-P7MGkvmyCDp8hM1RW164OZt9cdAundJAj4qL9biq46g='; object-src 'self'"
 }
