--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "author": "Arvin Ezzati",
   "version": "1.0.0",
   "manifest_version": 2,
-  "description": "Search a word for its synonyms as well as its definitions and parts of speech!",
+  "description": "Search a word for its synonyms as well as its definitions for each of its parts of speech!",
   "icons": {
     "128": "/s512.png",
     "48": "/s128.png"
